
#=============================================================================
# do some plugin specific configuration
#=============================================================================
find_package(BZip2 REQUIRED)

#=============================================================================
# setup the plugin name
#=============================================================================
set(PLUGIN_NAME h5bz2)

#=============================================================================
# adding required subdirectories
#=============================================================================
add_subdirectory(src)
add_subdirectory(test)



